# website-content-auditor

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/analysis/: __init__.py  aggregator.py  analyzer.py  chunker.py  duplicate_detector.py  embeddings.py  heuristics.py  json_repair.py  output_quality.py  placeholders.py  prompts.py
app/api/: __init__.py  routes.py
app/crawler/: __init__.py  discovery.py  extractor.py  fetcher.py  filters.py  placeholders.py  playwright_fetcher.py  url_normalizer.py
app/jobs/: __init__.py  manager.py  runner.py
app/models/: __init__.py  analysis.py  api.py  crawl.py  jobs.py  results.py
app/providers/: __init__.py  base.py  ollama.py
app/reports/: __init__.py  html_report.py  placeholders.py
app/reports/templates/: audit_report.html.j2
app/storage/: __init__.py  database.py  repositories.py
app/utils/: logging.py  text.py
tests/: __init__.py  test_analysis_aggregator.py  test_analysis_analyzer.py  test_analysis_chunker.py  test_analysis_duplicate_detector.py  test_analysis_embeddings.py  test_analysis_heuristics.py  test_analysis_json_repair.py  test_analysis_prompts.py  test_api.py  test_crawler_discovery.py  test_crawler_extractor.py  test_crawler_fetcher.py  test_crawler_filters.py  test_crawler_url_normalizer.py  test_jobs_runner.py  test_providers_ollama.py  test_reports_html_report.py
